--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/Saff-Elli-Khan/epic-boilerplate#readme",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
     "@types/express-validator": "^3.0.0",
     "@types/http-errors": "^1.6.3",
