--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-handlebars": "^4.0.4",
     "express-validator": "^6.5.0",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
   },
@@ -37,6 +37,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
+    "@types/express-handlebars": "^3.1.0",
     "@types/express-validator": "^3.0.0",
     "@types/http-errors": "^1.6.3",
     "@types/morgan": "^1.9.1",
