--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
+    "start": "ts-node ./bin/www.ts",
+    "dev": "nodemon ./bin/www.ts"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,7 +17,9 @@
     "express-validator": "^6.5.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5"
   },
   "repository": {
     "type": "git",
@@ -41,6 +44,8 @@
     "@types/express-validator": "^3.0.0",
     "@types/http-errors": "^1.6.3",
     "@types/morgan": "^1.9.1",
-    "@types/multer": "^1.4.3"
+    "@types/multer": "^1.4.3",
+    "handlebars": "^4.7.6",
+    "nodemon": "^2.0.4"
   }
 }
