--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "description": "A Powerful Web Application Platform.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node ./bin/www.ts",
     "dev": "nodemon ./bin/www.ts"
   },
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^4.0.4",
     "express-validator": "^6.5.0",
+    "handlebars": "^4.7.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
@@ -45,7 +46,6 @@
     "@types/http-errors": "^1.6.3",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
-    "handlebars": "^4.7.6",
     "nodemon": "^2.0.4"
   }
 }
