--- a/themes/default/config.json
+++ b/themes/default/config.json
@@ -5,9 +5,11 @@
   "uri": null,
   "author": "Saif Ali Khan",
   "author-url": "https://facebook.com/saffellikhan",
-  "tags": ["basic", "default", "starter", "theme"],
+  "tags": ["epic", "basic", "default", "starter", "theme"],
   "license": "GNU General Public License v2 or later",
   "license-uri": "http://www.gnu.org/licenses/gpl-2.0.html",
-  "variables": {},
-  "meta": {}
+  "imports": {
+    "head": {},
+    "foot": {}
+  }
 }
