--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@handlebars/allow-prototype-access": "^1.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-handlebars": "^4.0.4",
     "express-validator": "^6.5.0",
