--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "handlebars": "^4.7.6",
     "http-errors": "~1.6.3",
     "jquery-jsdom": "^1.0.0",
+    "moment": "^2.27.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "ts-node": "^8.10.2",
