--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-handlebars": "^4.0.4",
+    "express-http-to-https": "^1.1.4",
     "express-validator": "^6.5.0",
     "handlebars": "^4.7.6",
     "http-errors": "~1.6.3",
