--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
@@ -18,6 +19,7 @@
     "express-http-to-https": "^1.1.4",
     "express-validator": "^6.5.0",
     "handlebars": "^4.7.6",
+    "helmet": "^3.23.3",
     "http-errors": "~1.6.3",
     "jquery-jsdom": "^1.0.0",
     "moment": "^2.27.0",
@@ -43,10 +45,12 @@
   "homepage": "https://github.com/Saff-Elli-Khan/epic-boilerplate#readme",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
     "@types/express-handlebars": "^3.1.0",
     "@types/express-validator": "^3.0.0",
+    "@types/helmet": "0.0.47",
     "@types/http-errors": "^1.6.3",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
