--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "app.js",
   "scripts": {
     "start": "ts-node ./bin/www.ts",
-    "dev": "nodemon ./bin/www.ts"
+    "dev": "nodemon ./bin/www.ts",
+    "lint": "eslint . --ext .ts",
+    "lint-fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
@@ -54,6 +56,9 @@
     "@types/http-errors": "^1.6.3",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "eslint": "^7.3.1",
     "nodemon": "^2.0.4"
   }
 }
