--- a/package.json
+++ b/package.json
@@ -2,34 +2,13 @@
   "name": "epic",
   "version": "0.0.0",
   "private": true,
-  "description": "A Powerful Web Application Platform.",
+  "description": "A Powerful Web Application Platform Development Boilerplate.",
   "main": "app.js",
   "scripts": {
-    "start": "ts-node ./bin/www.ts",
-    "dev": "nodemon ./bin/www.ts",
+    "start": "ts-node ./app.ts",
+    "dev": "nodemon ./app.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix"
-  },
-  "dependencies": {
-    "@handlebars/allow-prototype-access": "^1.0.3",
-    "compression": "^1.7.4",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "express-handlebars": "^4.0.4",
-    "express-http-to-https": "^1.1.4",
-    "express-validator": "^6.5.0",
-    "handlebars": "^4.7.6",
-    "helmet": "^3.23.3",
-    "http-errors": "~1.6.3",
-    "jquery-jsdom": "^1.0.0",
-    "moment": "^2.27.0",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
   },
   "repository": {
     "type": "git",
@@ -46,21 +25,16 @@
     "url": "https://github.com/Saff-Elli-Khan/epic-boilerplate/issues"
   },
   "homepage": "https://github.com/Saff-Elli-Khan/epic-boilerplate#readme",
-  "devDependencies": {
-    "@types/compression": "^1.7.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.6",
-    "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.6",
+  "dependencies": {
     "@types/express-handlebars": "^3.1.0",
-    "@types/express-validator": "^3.0.0",
-    "@types/helmet": "0.0.47",
-    "@types/http-errors": "^1.6.3",
-    "@types/morgan": "^1.9.1",
-    "@types/multer": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
-    "eslint": "^7.3.1",
+    "@types/http-errors": "^1.8.0",
+    "epic-framework": "^1.0.13",
+    "epic-framework-plugin-manager": "^1.0.1",
+    "epic-framework-theme-manager": "^1.0.5",
+    "express-http-to-https": "^1.1.4",
+    "http-errors": "^1.8.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4"
   }
 }
